force-app/main/default/objects/Lead/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External Id</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>