force-app/main/default/objects/Lead/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height</description>
    <label>Height</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>