force-app/main/default/objects/Lead/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Height</description>
    <label>Weight</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>